# ai-mhod

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  flake.nix  litestream.yml
.github/workflows/: deploy-api.yml  deploy-backend.yml  deploy-frontend.yml  deploy-proxy.yml
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: config.rs  main.rs  response.rs
apps/api/src/auth/: jwt.rs  mod.rs
apps/api/src/routes/: dashboard.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/proxy/: Cargo.toml  Dockerfile
apps/proxy/src/: config.rs  main.rs  metrics.rs  proxy.rs  token.rs
apps/proxy/src/auth/: api_key.rs  mod.rs
apps/proxy/src/dto/: claude.rs
apps/proxy/src/routes/: anthropic.rs  common.rs  mod.rs  zai.rs
apps/web/: Dockerfile  env.ts  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx
apps/web/app/dashboard/: layout.tsx
apps/web/app/login/: page.tsx
apps/web/components/: app-sidebar.tsx  dynamic-breadcrumb.tsx  theme-toggle.tsx
apps/web/components/dashboard/usage/: dashboard.tsx
apps/web/components/dev/: token-card.tsx
apps/web/components/login/: sign-btn.tsx
apps/web/lib/: api-error.ts  auth.ts
apps/web/types/: api.ts
crates/dynamodb/: Cargo.toml
crates/dynamodb/src/: lib.rs
crates/dynamodb/src/items/: key.rs  mod.rs  usage_log.rs  user.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs  usage_log.rs
crates/repository/: Cargo.toml
crates/repository/src/: lib.rs
dynamodb/: Cargo.toml
dynamodb/src/: lib.rs
dynamodb/src/items/: key.rs  usage_log.rs  user.rs
error/: Cargo.toml
error/src/: lib.rs
model/: Cargo.toml
model/src/: anthropic.rs  lib.rs  usage_log.rs  user.rs
repository/: Cargo.toml
repository/src/: lib.rs
server/: Cargo.toml
server/src/: auth.rs  config.rs  error.rs  lib.rs  metrics.rs  proxy.rs  response.rs  routes.rs
server/src/auth/: jwt.rs  mod.rs
server/src/routes/: dashboard.rs  mod.rs  zai.rs
sqlite/: Cargo.toml
sqlite/src/: lib.rs
src/: config.rs  main.rs
terraform/dynamodb/: ai_mhod.tf  output.tf  var.tf
terraform/environment/production/: main.tf
web/: .dockerignore  env.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
web/actions/: usage.tsx
web/app/: globals.css  layout.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/app/dashboard/usage/: page.tsx  params.ts
web/app/dev/: page.tsx
web/app/login/: page.tsx
web/components/: app-sidebar.tsx
web/components/dashboard/usage/: chart.tsx  dashboard.tsx
web/contexts/: breadcrumb-context.tsx
web/lib/: api.ts  auth-client.ts
web/types/: usage.ts
