[package]
name = "mhod"
version = "0.1.0"
edition = "2024"

[dependencies]
server.workspace = true
sqlite.workspace = true
repository.workspace = true
model.workspace = true
axum.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
clap.workspace = true

[[bin]]
name = "mhod"
path = "src/main.rs"

[workspace]
members = ["server", "model", "repository", "sqlite"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
rand = "0.9"
async-trait = "0.1"
anyhow = "1"
model = { path = "model" }
server = { path = "server" }
repository = { path = "repository" }
sqlite = { path = "sqlite" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
