[package]
name = "error"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[features]
openapi = ["utoipa"]

[dependencies.utoipa]
version = "5"
optional = true
