[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
dotenvy.workspace = true
model.workspace = true
repository.workspace = true
anyhow.workspace = true
futures-util = "0.3"
jsonwebtoken.workspace = true
serde.workspace = true
chrono.workspace = true
error.workspace = true
