[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../../crates/model" }
repository = { path = "../../crates/repository" }
dynamodb = { path = "../../crates/dynamodb" }
error = { path = "../../crates/error" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = "0.4"
jsonwebtoken = "9"
dotenvy = "0.15"
reqwest = "0.13"
anyhow = "1"
aws-config = "1"
aws-sdk-dynamodb = "1"
