[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { workspace = true }
repository = { workspace = true }
dynamodb = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }

[lints]
workspace = true
