[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { workspace = true }
repository = { workspace = true }
dynamodb = { workspace = true }
error = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }

[lints]
workspace = true
