[package]
name = "dynamodb"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { workspace = true }
repository = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde = { workspace = true }
serde_dynamo = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
aws-config = { workspace = true }

[lints]
workspace = true
