[package]
name = "error"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"

[features]
openapi = ["utoipa"]

[dependencies.utoipa]
version = "5"
optional = true
