[package]
name = "error"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[features]
openapi = ["utoipa"]

[dependencies.utoipa]
version = "5"
optional = true

[lints]
workspace = true
